--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "neostandard": "^0.11.6",
         "prettier": "3.3.3",
         "prettier-plugin-organize-imports": "^4.1.0",
-        "prettier-plugin-tailwindcss": "^0.6.8"
+        "prettier-plugin-tailwindcss": "^0.6.8",
+        "typescript-eslint": "^8.7.0"
     }
 }
