--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "prettier": "3.3.3",
         "prettier-plugin-organize-imports": "^4.1.0",
         "prettier-plugin-tailwindcss": "^0.6.8",
-        "typescript-eslint": "^8.7.0"
+        "typescript-eslint": "^8.7.0",
+        "vue-tsc": "^2.1.6"
     }
 }
